# ossie-june

./: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
components/AutomaticGainControl/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool
components/AutomaticGainControl/.deps/: AutomaticGainControl.Po  main.Po
components/AutomaticGainControl/autom4te.cache/: output.0  output.1  traces.1
components/Channel/: Channel.cpp  Channel.h  Channel.prf.xml  Channel.scd.xml  Channel.spd.xml  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool  main.cpp
components/Conv_Dec/: Conv_Dec.cpp  Conv_Dec.h  Conv_Dec.prf.xml  Conv_Dec.scd.xml  Conv_Dec.spd.xml  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool  main.cpp
components/Conv_Enc/: Conv_Enc.cpp  Conv_Enc.h  Conv_Enc.prf.xml  Conv_Enc.scd.xml  Conv_Enc.spd.xml  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool  main.cpp
components/Decimator/: Decimator.cpp  Decimator.h  Decimator.prf.xml  Decimator.spd.xml  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool  main.cpp
components/DigitalModem/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool
components/FrameAssembler/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool
components/Interpolator/: Interpolator.cpp  Interpolator.h  Interpolator.prf.xml  Interpolator.scd.xml  Interpolator.spd.xml  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool  main.cpp
components/JPEG_VideoViewer/: AUTHORS  JPEG_VideoViewer.cpp  JPEG_VideoViewer.h  JPEG_VideoViewer.spd.xml  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  jconfig.h  libtool  main.cpp  utils.cpp  utils.h
components/NoiseCancelling/: .cproject  .project  Doxyfile  Makefile  Makefile.am  Makefile.in  NoiseCancelling.cpp  NoiseCancelling.h  NoiseCancelling.ocd  NoiseCancelling.prf.xml  NoiseCancelling.scd.xml  NoiseCancelling.spd.xml  config.status  configure  configure.ac  documentation.txt  libtool  main.cpp
components/OSSIETalk/: Makefile  Makefile.am  Makefile.in  OSSIETalk.py  OSSIETalk.scd.xml  OSSIETalk.spd.xml  README  WorkModules.py  audio_capture_test.py  audio_cvsd_test.py  audio_loopback_test.py  audio_playback_test.py  config.status  configure  configure.ac  cvsd.py  port_impl.py  setup.py  test_mic.py  wx_inits.py
components/PacketResizer/: Makefile  Makefile.am  Makefile.in  PacketResizer.cpp  PacketResizer.h  PacketResizer.prf.xml  PacketResizer.scd.xml  PacketResizer.spd.xml  config.status  configure  configure.ac  libtool  main.cpp
components/Sound_Commander/: .cproject  .project  Doxyfile  Makefile  Makefile.am  Makefile.in  Sound_Commander  Sound_Commander.cpp  Sound_Commander.h  Sound_Commander.ocd  Sound_Commander.prf.xml  Sound_Commander.scd.xml  Sound_Commander.spd.xml  config.status  configure  configure.ac  documentation.txt  libtool  main.cpp
components/SymbolSyncPoly/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool
components/WFMDemod/: Makefile  Makefile.am  Makefile.in  WFMDemod.cpp  WFMDemod.h  WFMDemod.spd.xml  config.status  configure  configure.ac  libtool  main.cpp
components/WebCamCapture/: Makefile  Makefile.am  Makefile.in  SDL_audioin.h  SDL_audioin_internal.h  WebCamCapture.cpp  WebCamCapture.h  WebCamCapture.spd.xml  config.status  configure  configure.ac  jconfig.h  libtool  main.cpp  spcaframe.h  spcav4l.h  utils.cpp  utils.h
components/am_demod/: Makefile  Makefile.am  Makefile.in  am_demod.cpp  am_demod.h  am_demod.spd.xml  config.status  configure  configure.ac  libtool  main.cpp
components/readBytesfromFile/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool  main.cpp  readBytesfromFile.cpp  readBytesfromFile.h  readBytesfromFile.prf.xml  readBytesfromFile.scd.xml  readBytesfromFile.spd.xml
components/writeBytestoFile/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool  main.cpp  writeBytestoFile.cpp  writeBytestoFile.h  writeBytestoFile.prf.xml  writeBytestoFile.scd.xml  writeBytestoFile.spd.xml
platform/SoundCard/: Makefile  Makefile.am  Makefile.in  NetHandler.h  README  config.status  configure  configure.ac  libtool  main.cpp  port_impl.cpp  soundCard  soundCard.cpp  soundCard.h  soundCard.prf.xml  soundCard.scd.xml  soundCard.spd.xml  soundControl.idl
platform/Sound_in/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool  main.cpp  soundCardCapture.cpp  soundCardCapture.h  soundCardCapture.spd.xml
platform/Sound_out/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool  main.cpp  port_impl.cpp  soundCardPlayback.cpp  soundCardPlayback.h  soundCardPlayback.prf.xml  soundCardPlayback.spd.xml
platform/USRP/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool
platform/USRP2/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool
platform/XilinxFPGA/: EthernetLite.prf.xml  INSTALL  Makefile  Makefile.am  Makefile.in  UARTLite.prf.xml  XCV4FX12-FF668-10C.prf.xml  XilinxFPGA.cpp  XilinxFPGA.h  XilinxFPGA.scd.xml  XilinxFPGA.spd.xml  config.status  configure  configure.ac  libtool  main.cpp
tools/: ALF  Makefile  Makefile.am  Makefile.in  WAVEDASH  config.status  configure  configure.ac  setup.py
tools/WaveDev/: Makefile  Makefile.am  Makefile.in  wavedev.cfg
tools/alf/: ALF.py  ALFNSChoiceDialog.py  ALFNodeBooterDialog.py  ALFNodeBooterUtils.py  ALFutils.py  Makefile  Makefile.am  Makefile.in  compform.py  connectTool.py  importResourceForALF.py  importWaveform.py  loadAutomationFile.py  namingserviceDialog.py
tools/alf_plugins/: Makefile  Makefile.am  Makefile.in
tools/autom4te.cache/: output.0  requests  traces.0  traces.1
tools/wavedash/: Makefile  Makefile.am  Makefile.in
(+897 files in other folders)
