AC_INIT(tool_suite, 0.7.0)
AM_INIT_AUTOMAKE
AM_PATH_PYTHON([2.5])
AC_CONFIG_FILES(Makefile \
                alf/Makefile \
                alf/config/Makefile \
                alf/images/Makefile \
                alf/profiles/Makefile \
                alf_plugins/Makefile \
                alf_plugins/AWG/Makefile \
                alf_plugins/plot/Makefile \
                alf_plugins/speaker/Makefile \
                alf_plugins/write_to_file/Makefile \
                WaveDev/Makefile \
                WaveDev/wavedev/Makefile \
                WaveDev/wavedev/images/Makefile \
                WaveDev/wavedev/XML_gen/Makefile \
                WaveDev/wavedev/XML_gen/DevMan/Makefile \
                WaveDev/wavedev/XML_gen/templates/Makefile \
                WaveDev/wavedev/XML_gen/dtd/Makefile \
                WaveDev/wavedev/generate/Makefile \
                WaveDev/wavedev/generate/basic_xml/Makefile \
                WaveDev/wavedev/generate/templates/Makefile \
                WaveDev/wavedev/generate/templates/basic_ports/Makefile \
                WaveDev/wavedev/generate/templates/custom_ports/Makefile \
                WaveDev/wavedev/generate/templates/py_comp/Makefile\
                wavedash/Makefile \
                wavedash/src/Makefile \
                wavedash/src/resources/Makefile)
AC_OUTPUT
