AM_CXXFLAGS = -Wall 

bin_PROGRAMS = NoiseCancelling

NoiseCancelling_SOURCES = NoiseCancelling.cpp NoiseCancelling.h main.cpp

ossieName = NoiseCancelling
xmldir = $(prefix)/dom/xml/$(ossieName)
bindir = $(prefix)/dom/bin
dist_xml_DATA = NoiseCancelling.prf.xml NoiseCancelling.scd.xml \
NoiseCancelling.spd.xml 

