ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = OSSIETalk.prf.xml      \
			 OSSIETalk.scd.xml      \
			 OSSIETalk.spd.xml	\
			 cvsd.py                 \
			 port_impl.py            \
			 OSSIETalk.py           \
			 WorkModules.py          \
			 wx_inits.py	\
			 audio_capture_test.py \
			 audio_cvsd_test.py \
			 audio_loopback_test.py \
			 audio_playback_test.py \
			 test_mic.py \
			 setup.py

install-exec-hook:
	python setup.py install
