AM_CXXFLAGS = -Wall 

bin_PROGRAMS = Sound_Commander

Sound_Commander_SOURCES = Sound_Commander.cpp Sound_Commander.h main.cpp

ossieName = Sound_Commander
xmldir = $(prefix)/dom/xml/$(ossieName)
bindir = $(prefix)/dom/bin
dist_xml_DATA = Sound_Commander.prf.xml Sound_Commander.scd.xml \
Sound_Commander.spd.xml 

